update remove dark

--- a/src/styles/fonts/fonts.css
+++ b/src/styles/fonts/fonts.css
@@ -1,9 +1,74 @@
 @font-face {
-  font-family: "garnett";
-  src: url("./garnett/Garnett Black Italic.otf") format("otf"), url("./garnett/Garnett Black.otf") format("otf"), url("./garnett/Garnett Bold Italic.otf") format("otf"),
-    url("./garnett/Garnett Bold.otf") format("otf"), url("./garnett/Garnett Italic.otf") format("otf"), url("./garnett/Garnett Light Italic.otf") format("otf"),
-    url("./garnett/Garnett Medium Italic.otf") format("otf"), url("./garnett/Garnett Regular.otf") format("otf"), url("./garnett/Garnett Semibold Italic.otf") format("otf"),
-    url("./garnett/Garnett Semibold.otf") format("otf");
+  font-family: "Garnett-Black";
+  src: url("./garnett-font-family/Garnett-Black.woff") format("woff"), url("./garnett-font-family/Garnett-Black.ttf") format("ttf");
+  font-weight: 900;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Garnett-BlackItalic";
+  src: url("./garnett-font-family/Garnett-BlackItalic.woff") format("woff"), url("./garnett-font-family/Garnett-BlackItalic.ttf") format("ttf");
+  font-weight: 900;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Garnett-Bold";
+  src: url("./garnett-font-family/Garnett-Bold.woff") format("woff"), url("./garnett-font-family/Garnett-Bold.ttf") format("ttf");
+}
+@font-face {
+  font-family: "Garnett-BoldItalic";
+  src: url("./garnett-font-family/Garnett-BoldItalic.woff") format("woff"), url("./garnett-font-family/Garnett-BoldItalic.ttf") format("ttf");
+}
+@font-face {
+  font-family: "Garnett-Light";
+  src: url("./garnett-font-family/Garnett-Light.woff") format("woff"), url("./garnett-font-family/Garnett-Light.ttf") format("ttf");
+  font-display: swap;
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Garnett-LightItalic";
+  src: url("./garnett-font-family/Garnett-LightItalic.woff") format("woff"), url("./garnett-font-family/Garnett-LightItalic.ttf") format("ttf");
+  font-weight: 300;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Garnett-Medium";
+  src: url("./garnett-font-family/Garnett-Medium.woff") format("woff"), url("./garnett-font-family/Garnett-Medium.ttf") format("ttf");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Garnett-MediumItalic";
+  src: url("./garnett-font-family/Garnett-MediumItalic.woff") format("woff"), url("./garnett-font-family/Garnett-MediumItalic.ttf") format("ttf");
+  font-weight: 500;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Garnett-Regular";
+  src: url("./garnett-font-family/Garnett-Regular.woff") format("woff"), url("./garnett-font-family/Garnett-Regular.ttf") format("ttf");
+}
+@font-face {
+  font-family: "Garnett-RegularItalic";
+  src: url("./garnett-font-family/Garnett-RegularItalic.woff") format("woff"), url("./garnett-font-family/Garnett-RegularItalic.ttf") format("ttf");
+}
+@font-face {
+  font-family: "Garnett-Semibold";
+  src: url("./garnett-font-family/Garnett-Semibold.woff") format("woff"), url("./garnett-font-family/Garnett-Semibold.ttf") format("ttf");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Garnett-SemiboldItalic";
+  src: url("./garnett-font-family/Garnett-SemiboldItalic.woff") format("woff"), url("./garnett-font-family/Garnett-SemiboldItalic.ttf") format("ttf");
+  font-weight: 700;
+  font-display: swap;
+  font-style: italic;
 }
 
 @font-face {
